--- a/jupyter/test.ipynb
+++ b/jupyter/test.ipynb
@@ -96,25 +96,35 @@
     "def evaluate(model, example):\n",
     "    article, keyword, reference = example\n",
     "\n",
-    "    summary, attention = model.evaluate(article, keyword)\n",
+    "    summary, enc_attention, dec_attention = model.evaluate(article, keyword)\n",
     "    score = get_score(summary, reference)\n",
     "\n",
     "    article_words = article.split()\n",
     "    summary_words = summary.split()\n",
-    "    attention = attention.cpu()\n",
+    "    enc_attention = enc_attention.cpu()\n",
+    "    dec_attention = dec_attention.cpu()\n",
     "\n",
     "    #show_attention_heatmap(article_words, summary_words, attention)\n",
     "\n",
-    "    article_words_attention = t.sum(attention, dim=0) / t.max(attention)\n",
-    "    article_words_attention = t.clamp(article_words_attention, 0, 1)\n",
+    "    enc_attention = t.sum(enc_attention, dim=0) / len(enc_attention)\n",
+    "    enc_attention = t.clamp(enc_attention, 0, 1)\n",
+    "    \n",
+    "    dec_attention = t.sum(dec_attention, dim=0) / len(dec_attention)\n",
+    "    dec_attention = t.clamp(dec_attention, 0, 1)\n",
     "\n",
-    "    heatmap_text = generate_attention_heatmap_text(article_words, article_words_attention)\n",
+    "    enc_heatmap_text = generate_attention_heatmap_text(article_words, enc_attention)\n",
+    "    dec_heatmap_text = generate_attention_heatmap_text(article_words, dec_attention)\n",
     "    \n",
     "    print()\n",
     "    \n",
-    "    print('\\033[1m' + 'Article' + '\\033[0m')\n",
-    "    print(heatmap_text)\n",
+    "    print('\\033[1m' + 'Article with Encoder Attention' + '\\033[0m')\n",
+    "    print(enc_heatmap_text)\n",
     "    \n",
+    "    print()\n",
+    "    \n",
+    "    print('\\033[1m' + 'Article with Decoder Attention' + '\\033[0m')\n",
+    "    print(dec_heatmap_text)\n",
+    "\n",
     "    print()\n",
     "    \n",
     "    print('\\033[1m' + 'Keyword' + '\\033[0m')\n",
